# chatgpt-web-oauth-mcp

./: .env.example  AGENTS.md  README-zh.md  README.md  README.zh-CN.md  pyproject.toml
scripts/: dev-tunnel.sh  install-launchd.sh  launchd-common.sh  launchd-doctor.sh  launchd-status.sh  uninstall-launchd.sh
skills/agents-deployment/: SKILL.md
src/chatgpt_web_oauth_mcp/: code_map.py  config.py  content_io.py  envtools.py  executors.py  files.py  gitops.py  http_compat.py  job_supervisor.py  launchd_support.py  notebooklm.py  notifiers.py  oauth.py  obsidian.py  reader.py  replacing.py  response_budget.py  search.py  server.py  session.py  shell.py  supervisor.py  taskboard.py  tmux_ops.py  tool_context.py  tools_core.py  tools_files.py  tools_git_shell.py  (+5 more)
tests/: conftest.py  test_budget_extensions.py  test_code_map_tools.py  test_concurrent_clients.py  test_config.py  test_delegate_tasks.py  test_env_tools.py  test_files_tools.py  test_git_tools.py  test_git_worktree_tools.py  test_job_tools.py  test_launchd_env.py  test_launchd_support.py  test_mcp_local_simulation.py  test_notebooklm_client.py  test_notebooklm_e2e.py  test_notebooklm_optional_behavior.py  test_notebooklm_tools.py  test_obsidian_tools.py  test_patch_tools.py  test_reader_replace_tools.py  test_search_tools.py  test_server_info.py  test_server_skills_tool.py  test_server_tools.py  test_server_transport.py  test_session_cwd.py  test_shell_tools.py  test_skills_tools.py  test_supervisor_reload.py  test_task_store_gc.py  test_taskboard.py  test_tmux_ops.py  test_tmux_tools.py  test_wait_task_event.py
(+8 files in other folders)
