[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-web-oauth-mcp"
version = "0.1.0"
description = "ChatGPT Web-compatible OAuth MCP server for local files, shell, git, and delegated coding tasks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Keep this explicit: local launchd/dev scripts verify the live venv
    # against pyproject.toml so stale editable metadata cannot silently drift.
    "fastmcp>=3.2.4,<4",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
chatgpt-web-oauth-mcp = "chatgpt_web_oauth_mcp.server:main"
chatgpt-web-oauth-supervisor = "chatgpt_web_oauth_mcp.supervisor:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
